Fix icons so they don't wrap

--- a/src/app/integrations/list/list.component.scss
+++ b/src/app/integrations/list/list.component.scss
@@ -43,6 +43,10 @@
             font-size: 18px;
           }
         }
+        .image-icon > img {
+          width: 32px;
+          height: 32px;
+        }
       }
 
       //----- Group 2: Text (Name & Description) ----------------->>
